--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@next/font": "^14.2.5",
+    "@nextui-org/react": "^2.4.6",
+    "@nextui-org/spinner": "^2.0.33",
+    "framer-motion": "^11.3.20",
     "iron-session": "^8.0.2",
     "next": "14.2.5",
     "react": "^18",
