--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dezysell",
+  "name": "dezy",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
     "@next/font": "^14.2.5",
     "@nextui-org/react": "^2.4.6",
     "@nextui-org/spinner": "^2.0.33",
+    "@prisma/client": "^5.17.0",
     "framer-motion": "^11.3.20",
     "iron-session": "^8.0.2",
     "next": "14.2.5",
