--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.4.6",
     "@nextui-org/spinner": "^2.0.33",
     "@prisma/client": "^5.17.0",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^11.3.20",
     "iron-session": "^8.0.2",
     "next": "14.2.5",
