--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "iron-session": "^8.0.2",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
