--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
