--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@nextui-org/spinner": "^2.0.33",
     "@prisma/client": "^5.17.0",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.3.20",
     "iron-session": "^8.0.2",
     "next": "14.2.5",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
     "uuid": "^10.0.0",
