--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@nextui-org/react": "^2.4.6",
     "@nextui-org/spinner": "^2.0.33",
     "@prisma/client": "^5.18.0",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.4.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.20",
@@ -22,6 +24,7 @@
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^16.9.0",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
