--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.20",
     "iron-session": "^8.0.2",
+    "moment": "^2.30.1",
     "next": "14.2.5",
     "nodemailer": "^6.9.14",
     "react": "^18",
