--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudfront": "^3.693.0",
     "@aws-sdk/client-s3": "^3.665.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
