--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.4.0",
     "bcrypt": "^5.1.1",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.5",
     "formidable": "^3.5.1",
     "framer-motion": "^11.3.20",
     "iron-session": "^8.0.4",
+    "luxon": "^3.5.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "next": "^14.2.13",
     "nodemailer": "^6.9.14",
     "react": "^18",
