--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18",
     "sharp": "^0.33.5",
     "stripe": "^16.9.0",
+    "tailwindcss": "3.4",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
@@ -42,7 +43,6 @@
     "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8.4.40",
-    "tailwindcss": "^3.4.6"
+    "postcss": "^8.4.40"
   }
 }
