--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@heroicons/react": "^2.1.5",
     "@nextui-org/react": "^2.4.6",
     "@nextui-org/spinner": "^2.0.33",
-    "@prisma/client": "^5.18.0",
+    "@prisma/client": "^6.3.1",
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.4.0",
     "bcrypt": "^5.1.1",
@@ -43,6 +43,7 @@
     "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8.4.40"
+    "postcss": "^8.4.40",
+    "prisma": "^6.3.1"
   }
 }
