--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.7",
     "formidable": "^3.5.1",
     "framer-motion": "^11.12.0",
+    "ioredis": "^5.5.0",
     "iron-session": "^8.0.4",
     "luxon": "^3.5.0",
     "moment": "^2.30.1",
